[tool.poetry]
name = "news-word-clouds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.2"
flask = "^1.1.2"
bs4 = "^0.0.1"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
